[package]
name = "simple-encryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
bitcode = "0.6.3"

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
strip = true
opt-level = 3
codegen-units = 1
